# bevy-gpu-heightmap

./: .gitignore  Cargo.toml  README.md
assets/: heightmap.wgsl  marching_cubes.wgsl  sample.wgsl
examples/: compute.rs  noise.rs
src/: chunk_generator.rs  compute.rs  height_sampler.rs  lib.rs  main.rs  terrain_sampler.rs
