[package]
name = "bevy-marching-cubes"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
	"bevy_render",
] }
bevy_app_compute = "0.16.0"
bytemuck = "1.23.1"

[dev-dependencies]
bevy = "0.16.0"
bevy_panorbit_camera = "0.27.0"

[lib]
name = "bevy_marching_cubes"
path = "src/lib.rs"
