[package]
name = "bevy-gpu-heightmap"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
	"bevy_render",
] }
bevy_app_compute = "0.16.0"
bytemuck = "1.23.2"

[dev-dependencies]
bevy = "0.16.1"
bevy_panorbit_camera = "0.28.0"

[lib]
name = "bevy_gpu_heightmap"
path = "src/lib.rs"
